* fix crash in flarm teammate setting
* user interface
  - enable gestures by default
  - show the primary data directory in the configuration dialog
* calculations
  - fix wind direction on glide terrain line
  - enable warnings for GND airspaces when AGL altitude is negative
* Android
  - fix two crash bugs on sound effect
* Altair
  - correct key handling behaviour in Lists

Version 6.0.9 - 2011-04-06
* devices
  - work around iPaq Bluetooth driver bug
* map
  - fix for hanging map on slow hardware
* Windows
  - fix setting the system time from GPS
  - PPC2000: major performance improvement
  - more backslash path fixes on Windows CE
* Android
  - don't require GPS and Bluetooth on Android Market
  - implement the battery InfoBox
  - internal GPS: show "waiting for fix" until location is obtained
  - allow SD card installation
  - "Droid Sans" is the default Android font
  - enable font preview
  - dead hardware keys fixed
  - implement sound effects

Version 6.0.8 - 2011/03/23
* don't estimate thermal source for skewed thermals
* devices
  - CAI302: fix task declaration on Android
  - EW microRecorder: minor task declaration fix
* configuration
  - Units: fix "feet per minute" support
  - save the "Auto Logger" setting
* Windows
  - use backslash for paths on Windows CE
* Android
  - calculate WGS84 to real altitude (internal GPS)
  - fix incorrect airspace warning repetitions
  - auto-reconnect to Bluetooth GPS after timeout
  - support the acceleration sensor
* Linux
  - more dialog improvements
  - fix bold font rendering
  - case insensitive file name matching

Version 6.0.7 - 2011/03/12
* devices
  - EW microRecorder: timeout during connect
  - EW microRecorder: increase RX timeout
  - EW microRecorder: insert new declaration into old EW-USER.TXT
* map
  - Airspace: support alternative OpenAir coordinate format
  - allow zooming in to 1 km
* replay: don't execute recorded input events
* Windows
  - hide the task bar on Windows CE Core
* Android