@@ -14,6 +14,7 @@ Version 6.0.10 - not yet released
   - fix two crash bugs on sound effect
 * Altair
   - correct key handling behaviour in Lists
+  - prevent wraparound of cursor navigation
 
 Version 6.0.9 - 2011-04-06
 * devices
